--- a/Ex01/index.html
+++ b/Ex01/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios</title>
+    <title>CatPhotoApp</title>
 </head>
 <body>
         <main>
                 <h1>CatPhotoApp</h1>
             <section>
                 <h2>Cat Photos</h2>
-                <p>See more <a href="pag02.html" target="_blank">cat photos</a> in our galery.</p>
-        </main>
-                <a href="pag02.html" target="_blank"><img src="imagens/relaxing-cat.jpg" alt="A cute orange cat lying on its back"></a>
+                <p>See more <a href="https://freecatphotoapp.com"" target="_blank">cat photos</a> in our galery.</p>
+                <a href="https://freecatphotoapp.com" target="_blank"><img src="imagens/relaxing-cat.jpg" alt="A cute orange cat lying on its back"></a>
             </section>
             <section>
                 <h2>Cat Lists</h2>
@@ -37,9 +36,28 @@
                         <img src="imagens/cats.jpg" alt="Five cats looking around a field.">
                         <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
                     </figure>
-
             </section>
-        
-    
+            <section>
+                <h2>Cat Form</h2>
+                <form action="https://freecatphotoapp.com/submit-cat-photo">
+                    <fieldset>
+                        <legend>Is your cat an indoor or outdoor cat?</legend>
+                        <label><input checked type="radio" id="indoor" name="indoor-outdoor" value="indoor"> Indoor </label>
+                        <label><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor"> Outdoor</label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>What's your cat's personality?</legend>
+                        <input checked value="loving"type="checkbox" name="personality" id="loving"> <label for="loving">Loving</label>
+                        <input value="lazy"type="checkbox" name="personality" id="lazy"> <label for="lazy">Lazy</label>
+                        <input value="energetic"type="checkbox" name="personality" id="energetic"> <label for="energetic">Energetic</label>
+                    </fieldset>
+                    <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+                    <button type="submit">Submit</button>
+                </form>
+            </section>
+        </main>
+        <footer>
+            <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p>
+        </footer>
 </body>
 </html>
